--- a/My Projects.html
+++ b/My Projects.html
@@ -10,21 +10,17 @@
   </head>
   <body data-aos="fade-down">
     <!--Navigation Bar-->
-    <ul class="Pages">
+    <ul class="Pages" data-aos="zoom-in">
         <li class="navbar-link"><a href="./index.html">Home</a></li>
-        <li class="navbar-link"><a href="./about.html">About Me</a></li>
+        <li class="navbar-link"><a href="./about.html">About</a></li>
         <li class="navbar-link"><a href="./education.html">Education</a></li>
         <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
         <li class="navbar-link"><a href="./testimonials.html">Testimonials</a></li>
         <li class="navbar-link"><a href="./contact.html">Contact</a> </a></li>
       </ul>
 
-      <h1 class="pro-heading">PROJECTS</h1>
-
-
-    <!-- CONTAINER -->
+    <!-- PROJECTS - CONTAINER -->
     <div class="container">
-
       <!-- CONTACT FORM-->
       <div class="project">
         <img
