--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
   <body>
 
 <!--Navigation Bar-->
-<ul class="Pages">
+<ul class="Pages" data-aos="zoom-in">
     <li class="navbar-link"><a href="./index.html">Home</a></li>
-    <li class="navbar-link"><a href="./about.html">About Me</a></li>
+    <li class="navbar-link"><a href="./about.html">About</a></li>
     <li class="navbar-link"><a href="./education.html">Education</a></li>
     <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
     <li class="navbar-link"><a href="./testimonials.html">Testimonials</a></li>
