--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Me</title>
+    <script src="https://kit.fontawesome.com/113cee423d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body>
+  <body >
    <!--Navigation Bar-->
-   <ul class="Pages">
+   <ul class="Pages" data-aos="zoom-in">
     <li class="navbar-link"><a href="./index.html">Home</a></li>
-    <li class="navbar-link"><a href="./about.html">About Me</a></li>
+    <li class="navbar-link"><a href="./about.html">About</a></li>
     <li class="navbar-link"><a href="./education.html">Education</a></li>
     <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
     <li class="navbar-link"><a href="./testimonials.html">Testimonials</a></li>
     <li class="navbar-link"><a href="./contact.html">Contact</a> </a></li>
   </ul>
+
+<!--Contact Form-->
+<form
+id="contact-form"
+action="https://formspree.io/f/xknkgygw"
+method="POST"
+>
+<h1 class="contact-heading">Contact me</h1>
+<!--Full Name-->
+<div class="contact-info">
+  <label for="name" class="contact-label"> Full Name: </label>
+  <input
+    type="text"
+    name="name"
+    id="name"
+    class="contact-input"
+    placeholder="Full Name"
+    required
+  />
+</div>
+
+<!--Email-->
+<div class="contact-info">
+  <label class="contact-label" for="email">Your email:</label>
+  <input
+    type="email"
+    name="_replyto"
+    id="email"
+    class="contact-input"
+    placeholder="name@domain.com"
+    required
+  />
+</div>
+
+<!--Phone Number-->
+<div class="contact-info">
+  <label for="number" class="contact-label">Phone number: </label>
+  <input
+    type="tel"
+    name="number"
+    id="number"
+    class="contact-input"
+    placeholder="084 123 4567"
+    required
+  />
+</div>
+
+<!--Message-->
+<div class="contact-info">
+  <label class="contact-label"> Your message: </label>
+  <textarea class="contact-input" name="message"></textarea>
+</div>
+
+<!-- your other form fields go here -->
+
+<button type="submit" class="button">Send</button>
+</form>
   </body>
 </html>
