--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Demi-Leigh Jefferies</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <!--Navigation Bar-->
-    <ul class="Pages" data-aos="zoom-in">
-      <li class="navbar-link"><a href="./index.html">Home</a></li>
-      <li class="navbar-link"><a href="./about.html">About Me</a></li>
-      <li class="navbar-link"><a href="./education.html">Education</a></li>
-      <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
-      <li class="navbar-link"><a href="./testimonials.html">Testimonials</a></li>
-      <li class="navbar-link"><a href="./contact.html">Contact</a> </a></li>
-    </ul>
+    <div>
+      <ul class="Pages" data-aos="zoom-in">
+        <li class="navbar-link"><a href="./index.html">Home</a></li>
+        <li class="navbar-link"><a href="./about.html">About Me</a></li>
+        <li class="navbar-link"><a href="./education.html">Education</a></li>
+        <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
+        <li class="navbar-link"><a href="./testimonials.html">Testimonials</a></li>
+        <li class="navbar-link"><a href="./contact.html">Contact</a> </a></li>
+      </ul>
+    </div>
 
     <!--Landing Section-->
     <section class="landing" data-aos="zoom-in">
