--- a/testimonials.html
+++ b/testimonials.html
@@ -9,7 +9,7 @@
   </head>
   <body>
   <!--Navigation Bar-->
-  <ul class="Pages">
+  <ul class="Pages" data-aos="zoom-in">
     <li class="navbar-link"><a href="./index.html">Home</a></li>
     <li class="navbar-link"><a href="./about.html">About Me</a></li>
     <li class="navbar-link"><a href="./education.html">Education</a></li>
