--- a/My Projects.html
+++ b/My Projects.html
@@ -11,13 +11,15 @@
   <body data-aos="fade-down">
     <!--Navigation Bar-->
     <ul class="Pages" data-aos="zoom-in">
-        <li class="navbar-link"><a href="./index.html">Home</a></li>
-        <li class="navbar-link"><a href="./about.html">About</a></li>
-        <li class="navbar-link"><a href="./education.html">Education</a></li>
-        <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
-        <li class="navbar-link"><a href="./testimonials.html">Testimonials</a></li>
-        <li class="navbar-link"><a href="./contact.html">Contact</a> </a></li>
-      </ul>
+      <li class="navbar-link"><a href="./index.html">Home</a></li>
+      <li class="navbar-link"><a href="./about.html">About</a></li>
+      <li class="navbar-link"><a href="./education.html">Education</a></li>
+      <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
+      <li class="navbar-link">
+        <a href="./testimonials.html">Testimonials</a>
+      </li>
+      <li class="navbar-link"><a href="./contact.html">Contact</a></li>
+    </ul>
 
     <!-- PROJECTS - CONTAINER -->
     <div class="container">
@@ -70,6 +72,7 @@
           <p class="description">
             Designed the slider using Glassmorphism.com and Owl Carousel.
           </p>
+
           <div class="buttons">
             <a
               href="https://quirky-curran-1e83c9.netlify.app/"
@@ -100,6 +103,36 @@
           <h2 class="heading">My-Timeline</h2>
           <h3 class="subtitle">HTML/CSS</h3>
           <p class="description">A timeline designed using AOS animations.</p>
+
+          <div class="buttons">
+            <a
+              href="https://vigorous-almeida-273b20.netlify.app/"
+              target="_blank"
+              class="button"
+              >Live</a
+            >
+            <a
+              href="https://github.com/Demi-Leigh/My-Timeline"
+              target="_blank"
+              class="button"
+              >Github</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <!--GUI Tkinter-->
+      <div class="project">
+        <img src="./images/Tkinter.png" alt="Timeline" class="card-img" />
+
+        <!--ABOUT PROJECT-->
+        <div class="about">
+          <h2 class="heading">Addition Calculator</h2>
+          <h3 class="subtitle">Python</h3>
+          <p class="description">
+            A program designed using Tkinter to add two numbers.
+          </p>
+
           <div class="buttons">
             <a
               href="https://vigorous-almeida-273b20.netlify.app/"
