--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Demi-Leigh Jefferies</title>
+    <script
+      src="https://kit.fontawesome.com/113cee423d.js"
+      crossorigin="anonymous"
+    ></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
@@ -16,14 +20,16 @@
         <li class="navbar-link"><a href="./about.html">About Me</a></li>
         <li class="navbar-link"><a href="./education.html">Education</a></li>
         <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
-        <li class="navbar-link"><a href="./testimonials.html">Testimonials</a></li>
-        <li class="navbar-link"><a href="./contact.html">Contact</a> </a></li>
+        <li class="navbar-link">
+          <a href="./testimonials.html">Testimonials</a>
+        </li>
+        <li class="navbar-link"><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
 
     <!--Landing Section-->
     <section class="landing" data-aos="zoom-in">
-      <img 
+      <img
         src="./images/Demi-Leigh_Jefferies__1_-removebg-preview.png"
         alt="Picture of Me"
         srcset=""
@@ -31,13 +37,17 @@
       <div>
         <h1>Demi-Leigh Jefferies</h1>
         <h2 class="dev-heading">Junior Web Developer</h2>
-        <p> Hi there! Welcome to my portfolio.<br>I am an aspiring Web Developer<br>Have a look around my portfolio and get to know a little more about me.<br>Hopefully we'll be in contact soon. 
+        <p>
+          Hi there! Welcome to my portfolio.<br />I am an aspiring Web
+          Developer<br />Have a look around my portfolio and get to know a
+          little more about me.<br />Hopefully we'll be in contact soon.
         </p>
       </div>
     </section>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-      <script>
-        AOS.init();
-      </script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
