--- a/My Projects.html
+++ b/My Projects.html
@@ -13,7 +13,7 @@
     <ul class="Pages" data-aos="zoom-in">
       <li class="navbar-link"><a href="./index.html">Home</a></li>
       <li class="navbar-link"><a href="./about.html">About</a></li>
-      <li class="navbar-link"><a href="./education.html">Education</a></li>
+      <li class="navbar-link"><a href="./education.html">Education/Work</a></li>
       <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
       <li class="navbar-link">
         <a href="./testimonials.html">Testimonials</a>
@@ -24,7 +24,7 @@
     <!-- PROJECTS - CONTAINER -->
     <div class="container">
       <!-- CONTACT FORM-->
-      <div class="project">
+      <div class="project" data-aos="fade-up-right">
         <img
           src="./images/Screenshot from 2021-05-03 14-09-27.png"
           alt="contact-form"
@@ -58,7 +58,7 @@
       </div>
 
       <!--TESTIMONIAL-->
-      <div class="project">
+      <div class="project" data-aos="fade-up-left">
         <img
           src="./images/Screenshot from 2021-05-03 14-16-14.png"
           alt="Testimonial"
@@ -91,7 +91,7 @@
       </div>
 
       <!--TIMELINE-->
-      <div class="project">
+      <div class="project" data-aos="fade-up-right">
         <img
           src="./images/Screenshot from 2021-05-03 14-25-04.png"
           alt="Timeline"
@@ -122,7 +122,7 @@
       </div>
 
       <!--GUI Tkinter-->
-      <div class="project">
+      <div class="project" data-aos="fade-up-left">
         <img src="./images/Tkinter.png" alt="Timeline" class="card-img" />
 
         <!--ABOUT PROJECT-->
