--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <ul class="Pages" data-aos="fade-down">
       <li class="navbar-link"><a href="./index.html">Home</a></li>
       <li class="navbar-link"><a href="./about.html">About</a></li>
-      <li class="navbar-link"><a href="./education.html">Education</a></li>
+      <li class="navbar-link"><a href="./education.html">Education/Work</a></li>
       <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
       <li class="navbar-link">
         <a href="./testimonials.html">Testimonials</a>
@@ -79,10 +79,16 @@
           <textarea class="contact-input" name="message"></textarea>
         </div>
 
-        <!-- your other form fields go here -->
-
         <button type="submit" class="button">Send</button>
       </form>
     </div>
+
+    <footer>
+      <div class="icons">
+        <p><i class="fas fa-phone"></i>0843100664</p>
+        <p><i class="fas fa-home"></i>0217155958</p>
+        <p><i class="fas fa-envelope"></i>demijefferies@gmail.com</p>
+      </div>
+    </footer>
   </body>
 </html>
