--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Demi-Leigh Jefferies</title>
-    <script
-      src="https://kit.fontawesome.com/113cee423d.js"
-      crossorigin="anonymous"
-    ></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
@@ -18,7 +14,9 @@
       <ul class="Pages" data-aos="zoom-in">
         <li class="navbar-link"><a href="./index.html">Home</a></li>
         <li class="navbar-link"><a href="./about.html">About Me</a></li>
-        <li class="navbar-link"><a href="./education.html">Education</a></li>
+        <li class="navbar-link">
+          <a href="./education.html">Education/Work</a>
+        </li>
         <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
         <li class="navbar-link">
           <a href="./testimonials.html">Testimonials</a>
