--- a/testimonials.html
+++ b/testimonials.html
@@ -25,7 +25,7 @@
     <ul class="Pages">
       <li class="navbar-link"><a href="./index.html">Home</a></li>
       <li class="navbar-link"><a href="./about.html">About Me</a></li>
-      <li class="navbar-link"><a href="./education.html">Education</a></li>
+      <li class="navbar-link"><a href="./education.html">Education/Work</a></li>
       <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
       <li class="navbar-link">
         <a href="./testimonials.html">Testimonials</a>
@@ -51,7 +51,7 @@
       </div>
 
       <div class="test-content">
-        <img src="./images/candice-amon.png"  class="test-img" alt="Image">
+        <img src="./images/Naeemah.jpg"  class="test-img" alt="Image">
         <h2>Naeemah Davis</h2>
         <h3>Peer</h3>
         <q>Demi is a talented , sweet and hard-working indiviual.<br>With both intellect and a great personality on her side,<br>I would recommend her for any form of work<br>as her presence is beneficial to all.</q>
@@ -63,6 +63,14 @@
         <h3>Lecturer</h3>
         <q>Demi-Leigh always has a smile on her face.<br>Her gentle personality and calmness in stressful situations will make for a great asset in any company.</q>
       </div>
+
+      <div class="test-content">
+        <img src="./images/Brent Lee Johnson (3).JPG" class="test-img" alt="Image">
+        <h2>Brent Lee Johnson</h2>
+        <h3>Peer</h3>
+        <q>Demi-Leigh is a dangerous student as she has that thirst to learn.<br>As hard-working as she is, Demi is not afraid to ask for help.<br>And even though she may lack in knowledge, Demi humbles herself to offer from her own plate..</q>
+      </div>
+
 
     </div>
   </div>
