--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <ul class="Pages" data-aos="zoom-in">
       <li class="navbar-link"><a href="./index.html">Home</a></li>
       <li class="navbar-link"><a href="./about.html">About</a></li>
-      <li class="navbar-link"><a href="./education.html">Education</a></li>
+      <li class="navbar-link"><a href="./education.html">Education/Work</a></li>
       <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
       <li class="navbar-link">
         <a href="./testimonials.html">Testimonials</a>
