--- a/education.html
+++ b/education.html
@@ -17,7 +17,7 @@
     <ul class="Pages" data-aos="zoom-in">
       <li class="navbar-link"><a href="./index.html">Home</a></li>
       <li class="navbar-link"><a href="./about.html">About</a></li>
-      <li class="navbar-link"><a href="./education.html">Education</a></li>
+      <li class="navbar-link"><a href="./education.html">Education/Work</a></li>
       <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
       <li class="navbar-link">
         <a href="./testimonials.html">Testimonials</a>
@@ -26,6 +26,7 @@
     </ul>
 
     <!--Timeline Container-->
+
     <section class="timeline-container">
       <div class="line"></div>
       <div class="card card1" data-aos="fade-left">
@@ -51,12 +52,48 @@
     </section>
 
     <h2 class="skills-heading" data-aos="fade-down">My Skills:</h2>
-    <div class="icons" data-aos="fade-up">
+    <div id="logos" data-aos="fade-up">
       <i class="fab fa-html5"></i>
       <i class="fab fa-css3-alt"></i>
       <i class="fab fa-python"></i>
     </div>
 
+    <h1 class="work-heading">Work Experience:</h1>
+
+    <section class="work-exp">
+      <div
+        class="work"
+        data-aos="fade-right"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine"
+      >
+        <h2 class="work-font">ICT Works</h2>
+        <h3 class="work-font">Job Title: General Worker</h3>
+        <h4 class="work-font">Duration: 6 July-6 October 2014</h4>
+      </div>
+
+      <div
+        class="work"
+        data-aos="fade-right"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine"
+      >
+        <h2 class="work-font">Bonpak</h2>
+        <h3 class="work-font">Job Title: General Worker</h3>
+        <h4 class="work-font">Duration: 26 October 2015- 6 July 2016</h4>
+      </div>
+
+      <div
+        class="work"
+        data-aos="fade-right"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine"
+      >
+        <h2 class="work-font">Rlabs/YES Program</h2>
+        <h3 class="work-font">Job Title: Intern</h3>
+        <h4 class="work-font">Duration:2 December 2019 - 30 November 2020</h4>
+      </div>
+    </section>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
