--- a/about.html
+++ b/about.html
@@ -7,10 +7,14 @@
     <title>About Me</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
+    <script
+      src="https://kit.fontawesome.com/113cee423d.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body>
+  <body >
     <!--Navigation Bar-->
-    <ul class="Pages" data-aos="zoom-in">
+    <ul class="Pages">
       <li class="navbar-link"><a href="./index.html">Home</a></li>
       <li class="navbar-link"><a href="./about.html">About</a></li>
       <li class="navbar-link"><a href="./education.html">Education/Work</a></li>
@@ -22,44 +26,53 @@
     </ul>
 
     <!--About Section-->
-    <section class="about-container">
-      <div class="bio-border" data-aos="fade-up-right">
-        <h2 class="bio">Bio:</h2>
+    <div class="bio">
+      <div class="bio-content">
+        <h2 class="bio-heading">Bio:</h2>
         <p class="about-text">
           I am a very quiet, introverted person who will only open up when I
           feel comfortable around you.I am caring, empathetic, and a good
           listener.I am someone that enjoys learning how to do new things,and I
-          also enjoy being around people who make me laugh.<br />My passion for
-          coding started when I was about 19/20 I was at home for a long time
-          taking care of my mother and I started looking at online courses I
-          could do from home. I found a web development course and one of the
-          first things they taught us was how to design a website.<br />Unfortunately,
-          I could not finish but I was fascinated by the little that I did and
-          knew I wanted to pursue a career in web development.
+          also enjoy being around people who make me laugh.<br />
+          <br />
+          My passion for coding started when I was about 19/20 I was at home for
+          a long time taking care of my mother and I started looking at online
+          courses I could do from home. I found a web development course and one
+          of the first things they taught us was how to design a website.<br />
+          <br />
+          Unfortunately, I could not finish but I was fascinated by the little
+          that I did and knew I wanted to pursue a career in web development.
         </p>
       </div>
-
-      <div class="bio-border" data-aos="fade-up-left">
-        <h2 class="bio">Passion Board:</h2>
-        <p class="about-text">
-          Reading<br />Hiking with friends<br />Playing video games<br />Krump
-          dancing<br />Watching TV series
-        </p>
+      <div class="bio-content2">
+        <div class="bio-1">
+          <h2 class="bio-heading">Passion Board:</h2>
+          <p class="about-text">
+            Reading<br />Hiking with friends<br />Playing video games<br />Krump
+            dancing<br />Watching TV series
+          </p>
+        </div>
+        <div class="bio-1">
+          <h2 class="bio-heading">Soft Skills:</h2>
+          <p class="about-text">
+            Time Management<br />Communication<br />Teamwork
+          </p>
+        </div>
+        <div class="bio-1">
+          <h2 class="bio-heading">Technical Skills:</h2>
+          <p class="about-text">Microsoft Office: Word and Excel</p>
+        </div>
       </div>
-
-      <div class="bio-border" data-aos="fade-up-right">
-        <h2 class="bio">Soft Skills:</h2>
-        <p class="about-text">
-          Time Management<br />Communication<br />Teamwork
-        </p>
+      <div class="picture">
+        <img src="./images/20210420_072220.jpg" alt="">
       </div>
-
-      <div class="bio-border" data-aos="fade-up-left">
-        <h2 class="bio">Technical Skills:</h2>
-        <p class="about-text">Microsoft Office: Word and Excel</p>
-      </div>
-    </section>
-
+    </div>
+    <div class="footer-about">
+      <a href="https://github.com/Demi-Leigh"
+        ><i class="fab fa-github"> Demi-Leigh Jefferies</i>
+      </a>
+    </div>
+  </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
