--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!--Navigation Bar-->
-    <ul class="Pages" data-aos="fade-down">
+    <ul class="Pages-contact" data-aos="fade-down">
       <li class="navbar-link"><a href="./index.html">Home</a></li>
       <li class="navbar-link"><a href="./about.html">About</a></li>
       <li class="navbar-link"><a href="./education.html">Education/Work</a></li>
@@ -83,12 +83,10 @@
       </form>
     </div>
 
-    <footer>
-      <div class="icons">
-        <p><i class="fas fa-phone"></i>0843100664</p>
-        <p><i class="fas fa-home"></i>0217155958</p>
-        <p><i class="fas fa-envelope"></i>demijefferies@gmail.com</p>
-      </div>
+    <footer class="footer-contact">
+      <a href="https://github.com/Demi-Leigh"
+          ><i class="fab fa-github"> Demi-Leigh Jefferies</i>
+        </a>
     </footer>
   </body>
 </html>
