--- a/My Projects.html
+++ b/My Projects.html
@@ -10,7 +10,7 @@
   </head>
   <body data-aos="fade-down">
     <!--Navigation Bar-->
-    <ul class="Pages" data-aos="zoom-in">
+    <ul class="Pages-projects" data-aos="zoom-in">
       <li class="navbar-link"><a href="./index.html">Home</a></li>
       <li class="navbar-link"><a href="./about.html">About</a></li>
       <li class="navbar-link"><a href="./education.html">Education/Work</a></li>
