--- a/education.html
+++ b/education.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!--Navigation Bar-->
-    <ul class="Pages" data-aos="zoom-in">
+    <ul class="Pages-edu" data-aos="zoom-in">
       <li class="navbar-link"><a href="./index.html">Home</a></li>
       <li class="navbar-link"><a href="./about.html">About</a></li>
       <li class="navbar-link"><a href="./education.html">Education/Work</a></li>
@@ -60,40 +60,38 @@
 
     <h1 class="work-heading">Work Experience:</h1>
 
-    <section class="work-exp">
-      <div
-        class="work"
-        data-aos="fade-right"
-        data-aos-offset="300"
-        data-aos-easing="ease-in-sine"
-      >
-        <h2 class="work-font">ICT Works</h2>
-        <h3 class="work-font">Job Title: General Worker</h3>
-        <h4 class="work-font">Duration: 6 July-6 October 2014</h4>
-      </div>
+    <div
+      class="work"
+      data-aos="fade-right"
+      data-aos-offset="300"
+      data-aos-easing="ease-in-sine"
+    >
+      <h2 class="work-font">ICT Works</h2>
+      <h3 class="work-font">Job Title: General Worker</h3>
+      <h4 class="work-font">Duration: 6 July-6 October 2014</h4>
+    </div>
 
-      <div
-        class="work"
-        data-aos="fade-right"
-        data-aos-offset="300"
-        data-aos-easing="ease-in-sine"
-      >
-        <h2 class="work-font">Bonpak</h2>
-        <h3 class="work-font">Job Title: General Worker</h3>
-        <h4 class="work-font">Duration: 26 October 2015- 6 July 2016</h4>
-      </div>
+    <div
+      class="work"
+      data-aos="fade-right"
+      data-aos-offset="300"
+      data-aos-easing="ease-in-sine"
+    >
+      <h2 class="work-font">Bonpak</h2>
+      <h3 class="work-font">Job Title: General Worker</h3>
+      <h4 class="work-font">Duration: 26 October 2015- 6 July 2016</h4>
+    </div>
 
-      <div
-        class="work"
-        data-aos="fade-right"
-        data-aos-offset="300"
-        data-aos-easing="ease-in-sine"
-      >
-        <h2 class="work-font">Rlabs/YES Program</h2>
-        <h3 class="work-font">Job Title: Intern</h3>
-        <h4 class="work-font">Duration:2 December 2019 - 30 November 2020</h4>
-      </div>
-    </section>
+    <div
+      class="work"
+      data-aos="fade-right"
+      data-aos-offset="300"
+      data-aos-easing="ease-in-sine"
+    >
+      <h2 class="work-font">Rlabs/YES Program</h2>
+      <h3 class="work-font">Job Title: Intern</h3>
+      <h4 class="work-font">Duration:2 December 2019 - 30 November 2020</h4>
+    </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
