--- a/index.html
+++ b/index.html
@@ -7,42 +7,53 @@
     <title>Demi-Leigh Jefferies</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
+    <script
+      src="https://kit.fontawesome.com/113cee423d.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <!--Navigation Bar-->
-    <div>
-      <ul class="Pages" data-aos="zoom-in">
-        <li class="navbar-link"><a href="./index.html">Home</a></li>
-        <li class="navbar-link"><a href="./about.html">About Me</a></li>
-        <li class="navbar-link">
-          <a href="./education.html">Education/Work</a>
-        </li>
-        <li class="navbar-link"><a href="./My Projects.html">Projects</a></li>
-        <li class="navbar-link">
-          <a href="./testimonials.html">Testimonials</a>
-        </li>
-        <li class="navbar-link"><a href="./contact.html">Contact</a></li>
-      </ul>
-    </div>
-
     <!--Landing Section-->
-    <section class="landing" data-aos="zoom-in">
-      <img
-        src="./images/Demi-Leigh_Jefferies__1_-removebg-preview.png"
-        alt="Picture of Me"
-        srcset=""
-      />
-      <div>
-        <h1>Demi-Leigh Jefferies</h1>
-        <h2 class="dev-heading">Junior Web Developer</h2>
-        <p>
-          Hi there! Welcome to my portfolio.<br />I am an aspiring Web
-          Developer<br />Have a look around my portfolio and get to know a
-          little more about me.<br />Hopefully we'll be in contact soon.
-        </p>
+      <!--Navigation Bar-->
+      <div class="Pages">
+        <ul>
+          <li class="navbar-link"><a href="./index.html">Home</a></li>
+          <li class="navbar-link"><a href="./about.html">About Me</a></li>
+          <li class="navbar-link">
+            <a href="./education.html">Education/Work</a>
+          </li>
+          <li class="navbar-link">
+            <a href="./My Projects.html">Projects</a>
+          </li>
+          <li class="navbar-link">
+            <a href="./testimonials.html">Testimonials</a>
+          </li>
+          <li class="navbar-link"><a href="./contact.html">Contact</a></li>
+        </ul>
       </div>
-    </section>
+      <div class="landing-content">
+        <img
+          src="./images/Demi-Leigh Jefferies (1).JPG"
+          alt="Picture of Me"
+          srcset=""
+        />
 
+        <div class="landing-description">
+          <h1>Junior Web Developer</h1>
+          <h2 class="dev-heading">Demi-Leigh Jefferies</h2>
+          <p>
+            Hi there! Welcome to my portfolio.<br />I am an aspiring Web
+            Developer<br />Have a look around my portfolio and get to know a
+            little more about me.<br />Hopefully we'll be in contact soon.
+          </p>
+        </div>
+      </div>
+      <div class="footer">
+        <a href="https://github.com/Demi-Leigh"
+          ><i class="fab fa-github"> Demi-Leigh Jefferies</i>
+        </a>
+      </div>
+    </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
