--- a/testimonials.html
+++ b/testimonials.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!--Navigation Bar-->
-    <ul class="Pages">
+    <ul class="Pages-test">
       <li class="navbar-link"><a href="./index.html">Home</a></li>
       <li class="navbar-link"><a href="./about.html">About Me</a></li>
       <li class="navbar-link"><a href="./education.html">Education/Work</a></li>
