--- a/My Projects.html
+++ b/My Projects.html
@@ -123,7 +123,7 @@
 
       <!--GUI Tkinter-->
       <div class="project" data-aos="fade-up-left">
-        <img src="./images/Tkinter.png" alt="Timeline" class="card-img" />
+        <img src="./images/Tkinter.png" alt="Calculator" class="card-img" />
 
         <!--ABOUT PROJECT-->
         <div class="about">
@@ -142,6 +142,74 @@
             >
             <a
               href="https://github.com/Demi-Leigh/My-Timeline"
+              target="_blank"
+              class="button"
+              >Github</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <!--Currency Converter-->
+      <div class="project" data-aos="fade-up-right">
+        <img
+          src="./images/Screenshot from 2021-06-25 09-58-30.png"
+          alt="Currency Converter"
+          class="card-img"
+        />
+
+        <!--ABOUT PROJECT-->
+        <div class="about">
+          <h2 class="heading">Currency Converter</h2>
+          <h3 class="subtitle">Python</h3>
+          <p class="description">
+            A program designed using Tkinter, an API and Python to design a
+            currency converter.
+          </p>
+
+          <div class="buttons">
+            <a
+              href="https://replit.com/@DemiLeigh23/Currency-Converter#main.py"
+              target="_blank"
+              class="button"
+              >Live</a
+            >
+            <a
+              href="https://github.com/Demi-Leigh/Currency-Converter"
+              target="_blank"
+              class="button"
+              >Github</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <!--Ticket Sales-->
+      <div class="project" data-aos="fade-up-left">
+        <img
+          src="./images/Screenshot from 2021-06-25 10-00-41.png"
+          alt="Ticket Sales"
+          class="card-img"
+        />
+
+        <!--ABOUT PROJECT-->
+        <div class="about">
+          <h2 class="heading">Ticket Sales</h2>
+          <h3 class="subtitle">Python</h3>
+          <p class="description">
+            A program designed using Tkinter and Python to buy tickets for
+            different events.
+          </p>
+
+          <div class="buttons">
+            <a
+              href="https://replit.com/@DemiLeigh23/Ticket-Sales#main.py"
+              target="_blank"
+              class="button"
+              >Live</a
+            >
+            <a
+              href="https://github.com/Demi-Leigh/Ticket-Sales"
               target="_blank"
               class="button"
               >Github</a
