--- a/My Projects.html
+++ b/My Projects.html
@@ -135,13 +135,13 @@
 
           <div class="buttons">
             <a
-              href="https://vigorous-almeida-273b20.netlify.app/"
+              href="https://replit.com/@DemiLeigh23/Adding-Two-Numbers#main.py"
               target="_blank"
               class="button"
               >Live</a
             >
             <a
-              href="https://github.com/Demi-Leigh/My-Timeline"
+              href="https://github.com/Demi-Leigh/Adding-Two-Numbers"
               target="_blank"
               class="button"
               >Github</a
@@ -164,7 +164,7 @@
           <h3 class="subtitle">Python</h3>
           <p class="description">
             A program designed using Tkinter, an API and Python to design a
-            currency converter.
+            currency converter that converts any currencyto USD.
           </p>
 
           <div class="buttons">
