--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
       </div>
       <div class="landing-content">
         <img
-          src="./images/Demi-Leigh Jefferies (1).JPG"
+          src="./images/me.png"
           alt="Picture of Me"
           srcset=""
         />
+        
 
         <div class="landing-description">
           <h1>Junior Web Developer</h1>
