--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
           <br />
           My passion for coding started when I was about 19/20 I was at home for
           a long time taking care of my mother and I started looking at online
-          courses I could do from home. I found a web development course and one
-          of the first things they taught us was how to design a website.<br />
+          courses I could do from home. I found a web development course and started learning
+          the basics.<br />
           <br />
           Unfortunately, I could not finish but I was fascinated by the little
           that I did and knew I wanted to pursue a career in web development.
