--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <div class="header">
+      <button class="menuButton"><i class="fas fa-bars"></i></button>
+    </div>
     <!--Navigation Bar-->
     <ul class="Pages-contact" data-aos="fade-down">
       <li class="navbar-link"><a href="./index.html">Home</a></li>
@@ -83,10 +86,13 @@
       </form>
     </div>
 
-    <footer class="footer-contact">
+    <div class="footer footer-contact">
       <a href="https://github.com/Demi-Leigh"
-          ><i class="fab fa-github"> Demi-Leigh Jefferies</i>
-        </a>
-    </footer>
+        ><i class="fab fa-github"></i>
+        <p>Demi-Leigh Jefferies</p>
+      </a>
+    </div>
+
+    <script src="./scripts.js"></script>
   </body>
 </html>
