--- a/education.html
+++ b/education.html
@@ -66,7 +66,7 @@
       data-aos-offset="300"
       data-aos-easing="ease-in-sine"
     >
-      <h2 class="work-font">ICT Works</h2>
+      <h2 class="work-head">ICT Works</h2>
       <h3 class="work-font">Job Title: General Worker</h3>
       <h4 class="work-font">Duration: 6 July-6 October 2014</h4>
     </div>
@@ -77,7 +77,7 @@
       data-aos-offset="300"
       data-aos-easing="ease-in-sine"
     >
-      <h2 class="work-font">Bonpak</h2>
+      <h2 class="work-head">Bonpak</h2>
       <h3 class="work-font">Job Title: General Worker</h3>
       <h4 class="work-font">Duration: 26 October 2015- 6 July 2016</h4>
     </div>
@@ -88,7 +88,7 @@
       data-aos-offset="300"
       data-aos-easing="ease-in-sine"
     >
-      <h2 class="work-font">Rlabs/YES Program</h2>
+      <h2 class="work-head">Rlabs/YES Program</h2>
       <h3 class="work-font">Job Title: Intern</h3>
       <h4 class="work-font">Duration:2 December 2019 - 30 November 2020</h4>
     </div>
