--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="landing-content">
         <img
-          src="./images/me.png"
+          src="./images/me1.png"
           alt="Picture of Me"
           srcset=""
         />
@@ -51,7 +51,9 @@
       </div>
       <div class="footer">
         <a href="https://github.com/Demi-Leigh"
-          ><i class="fab fa-github"> Demi-Leigh Jefferies</i>
+          ><i class="fab fa-github"></i>
+          <p>Demi-Leigh Jefferies</p>
+          
         </a>
       </div>
     </div>
