--- a/testimonials.html
+++ b/testimonials.html
@@ -94,7 +94,7 @@
           loop: true,
           stagePadding: 100,
           dots: false,
-          autoplay: true,
+          autoplay: false,
         });
       });
     </script>
