--- a/contact.html
+++ b/contact.html
@@ -82,14 +82,14 @@
           <textarea class="contact-input" name="message"></textarea>
         </div>
 
-        <button type="submit" class="button">Send</button>
+        <button type="submit" class="contactButton">Send</button>
       </form>
     </div>
 
     <div class="footer footer-contact">
       <a href="https://github.com/Demi-Leigh"
         ><i class="fab fa-github"></i>
-        <p>Demi-Leigh Jefferies</p>
+        <p class="footer-name">Demi-Leigh Jefferies</p>
       </a>
     </div>
 
