--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
       <div class="footer">
         <a href="https://github.com/Demi-Leigh"
           ><i class="fab fa-github"></i>
-          <p>Demi-Leigh Jefferies</p>
-          
+          <p class="footer-name">Demi-Leigh Jefferies</p>
         </a>
       </div>
     </div>
