--- a/testimonials.html
+++ b/testimonials.html
@@ -68,7 +68,7 @@
         <img src="./images/Brent Lee Johnson (3).JPG" class="test-img" alt="Image">
         <h2>Brent Lee Johnson</h2>
         <h3>Peer</h3>
-        <q>Demi-Leigh is a dangerous student as she has that thirst to learn.<br>As hard-working as she is, Demi is not afraid to ask for help.<br>And even though she may lack in knowledge, Demi humbles herself to offer from her own plate..</q>
+        <q>Demi-Leigh is a dangerous student as she has that thirst to learn.<br>As hard-working as she is, Demi is not afraid to ask for help.</q>
       </div>
 
 
@@ -94,7 +94,7 @@
           loop: true,
           stagePadding: 100,
           dots: false,
-          autoplay: false,
+          autoplay: true,
         });
       });
     </script>
