--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body >
+  <body>
     <!--Navigation Bar-->
     <ul class="Pages">
       <li class="navbar-link"><a href="./index.html">Home</a></li>
@@ -67,9 +67,10 @@
         <img src="./images/20210420_072220.jpg" alt="">
       </div>
     </div>
-    <div class="footer-about">
+    <div class="footer">
       <a href="https://github.com/Demi-Leigh"
-        ><i class="fab fa-github"> Demi-Leigh Jefferies</i>
+        ><i class="fab fa-github"></i>
+        <p class="footer-name">Demi-Leigh Jefferies</p>
       </a>
     </div>
   </div>
