--- a/My Projects.html
+++ b/My Projects.html
@@ -217,6 +217,65 @@
           </div>
         </div>
       </div>
+
+      <!--Life Choices Online-->
+      <div class="project" data-aos="fade-up-right">
+        <img
+          src="./images/lifechoicesonline.png"
+          alt="Life CHoices Online"
+          class="card-img"
+        />
+
+        <!--ABOUT PROJECT-->
+        <div class="about">
+          <h2 class="heading">Life Choices Online</h2>
+          <h3 class="subtitle">Python/SQL</h3>
+          <p class="description">
+            A program designed using Tkinter,Python and MySQL to create a
+            program that allows users to sign in/out.
+          </p>
+
+          <div class="buttons">
+            <a
+              href="https://github.com/Demi-Leigh/LifeChoicesOnline"
+              target="_blank"
+              class="button"
+              >Github</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <!--PokeDex-->
+      <div class="project" data-aos="fade-up-left">
+        <img src="./images/pokedex.png" alt="PokeDex" class="card-img" />
+
+        <!--ABOUT PROJECT-->
+        <div class="about">
+          <h2 class="heading">PokeDex</h2>
+          <h3 class="subtitle">HTML/CSS/JS</h3>
+          <p class="description">
+            A Pokedex that shows you an image of the pokemon with a description
+            aswell as its ability.
+          </p>
+
+          <div class="buttons">
+            <a
+              href="https://quizzical-mestorf-c46fe6.netlify.app/"
+              target="_blank"
+              class="button"
+              >Live</a
+            >
+
+            <a
+              href="https://github.com/Demi-Leigh/PokeDex"
+              target="_blank"
+              class="button"
+              >Github</a
+            >
+          </div>
+        </div>
+      </div>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
