--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body >
     <!--Navigation Bar-->
     <ul class="Pages">
       <li class="navbar-link"><a href="./index.html">Home</a></li>
@@ -27,6 +27,9 @@
 
     <!--About Section-->
     <div class="bio">
+      <div class="picture">
+        <img src="./images/20210420_072220.jpg" alt="">
+      </div>
       <div class="bio-content">
         <h2 class="bio-heading">Bio:</h2>
         <p class="about-text">
@@ -37,8 +40,8 @@
           <br />
           My passion for coding started when I was about 19/20 I was at home for
           a long time taking care of my mother and I started looking at online
-          courses I could do from home. I found a web development course and started learning
-          the basics.<br />
+          courses I could do from home. I found a web development course and one
+          of the first things they taught us was how to design a website.<br />
           <br />
           Unfortunately, I could not finish but I was fascinated by the little
           that I did and knew I wanted to pursue a career in web development.
@@ -62,9 +65,6 @@
           <h2 class="bio-heading">Technical Skills:</h2>
           <p class="about-text">Microsoft Office: Word and Excel</p>
         </div>
-      </div>
-      <div class="picture">
-        <img src="./images/20210420_072220.jpg" alt="">
       </div>
     </div>
     <div class="footer">
