--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
             name="_replyto"
             id="email"
             class="contact-input"
-            placeholder="name@domain.com"
+            placeholder="EMAIL ADRRESS"
             required
           />
         </div>
@@ -79,7 +79,11 @@
         <!--Message-->
         <div class="contact-info">
           <label class="contact-label" hidden> Your message: </label>
-          <textarea class="contact-input" name="message"></textarea>
+          <textarea
+            class="contact-input"
+            name="message"
+            placeholder="MESSAGE"
+          ></textarea>
         </div>
 
         <button type="submit" class="contactButton">Send</button>
