--- a/education.html
+++ b/education.html
@@ -56,6 +56,8 @@
       <i class="fab fa-html5"></i>
       <i class="fab fa-css3-alt"></i>
       <i class="fab fa-python"></i>
+      <i class="fas fa-database"></i>
+      <i class="fas fa-flask"></i>
     </div>
 
     <h1 class="work-heading">Work Experience:</h1>
